<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/eTNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbCP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ContaP" />

        <RadioButton
            android:id="@+id/rbCE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ContaE" />
    </RadioGroup>

    <TextView
        android:id="@+id/TxtVTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="38dp"
        android:text="@string/Tipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTNome"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="205dp"
        android:ems="10"
        android:hint="@string/Nome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNumConta"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/NumConta"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTNome" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Adicionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/TxtVNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toStartOf="@+id/txtVNum"
        app:layout_constraintStart_toStartOf="@+id/txtVNum"
        app:layout_constraintTop_toBottomOf="@+id/etNumConta" />

    <TextView
        android:id="@+id/txtVNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtVNome" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/Valor"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/btnSacar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtVErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="33dp"
        app:layout_constraintStart_toStartOf="@+id/etValor"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <Button
        android:id="@+id/btnSacar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="15dp"
        android:text="@string/Sacar"
        app:layout_constraintBottom_toTopOf="@+id/btnDepositar"
        app:layout_constraintStart_toStartOf="@+id/btnDepositar" />

    <Button
        android:id="@+id/btnDepositar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="128dp"
        android:text="@string/Depositar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAtualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="61dp"
        android:text="@string/Adicionar"
        app:layout_constraintBottom_toTopOf="@+id/btnSacar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etValor" />

    <TextView
        android:id="@+id/txtVSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVNum" />
</androidx.constraintlayout.widget.ConstraintLayout>
